Add service worker

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
         <button id="openW">ToWhats</button>
     </section>
     <script src="./script.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('./serviceworker.js');
+        }
+    </script>
 </body>
 </html>
